--- a/package.json
+++ b/package.json
@@ -10,12 +10,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "@nishant1500/wave": "^1.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
+    "react-audio-player": "^0.17.0",
+    "react-audio-visualizers": "^0.1.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-animated-weather-icons": "^1.0.4",
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "0.17.1",
+    "react-player": "^2.10.0",
+    "react-twitch-embed-video": "^3.0.2",
+    "weather": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
