--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -y",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build": "expo build:web"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -26,12 +27,14 @@
     "react-native-web": "0.17.1",
     "react-player": "^2.10.0",
     "react-twitch-embed-video": "^3.0.2",
+    "sharp-cli": "^1.15.0",
     "weather": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "expo-cli": "^5.3.1",
     "typescript": "~4.3.5"
   },
   "private": true
