--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "LIVE Sight Seer Radio",
-    "slug": "Sight Seer",
+    "name": "🔴LIVE Sight Seer Radio",
+    "slug": "Sight-Seer",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
