--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "build": "expo build:web"
+    "build": "expo build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
