--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@nishant1500/wave": "^1.0.0",
-    "expo": "latest",
+    "expo": "^44.0.6",
+    "expo-cli": "^5.3.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-audio-player": "^0.17.0",
