--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@nishant1500/wave": "^1.0.0",
+    "chokidar": "^3.5.3",
     "expo": "^44.0.6",
     "expo-cli": "^5.3.1",
     "expo-status-bar": "~1.2.0",
+    "graphql": "^16.3.0",
     "react": "17.0.1",
     "react-audio-player": "^0.17.0",
     "react-audio-visualizers": "^0.1.1",
@@ -29,6 +31,8 @@
     "react-player": "^2.10.0",
     "react-twitch-embed-video": "^3.0.2",
     "sharp-cli": "^1.15.0",
+    "svgo": "^2.8.0",
+    "uuid": "^8.3.2",
     "weather": "^1.0.4"
   },
   "devDependencies": {
