--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-animated-weather-icons": "^1.0.4",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-player": "^2.10.0",
     "react-twitch-embed-video": "^3.0.2",
